_build/html/reports/word2vec_1.log
Traceback (most recent call last):
  File "/opt/anaconda3/envs/jupyterbook/lib/python3.10/site-packages/jupyter_cache/executors/utils.py", line 51, in single_nb_execution
    executenb(
  File "/opt/anaconda3/envs/jupyterbook/lib/python3.10/site-packages/nbclient/client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/opt/anaconda3/envs/jupyterbook/lib/python3.10/site-packages/nbclient/util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/opt/anaconda3/envs/jupyterbook/lib/python3.10/site-packages/nbclient/util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "/opt/anaconda3/envs/jupyterbook/lib/python3.10/asyncio/base_events.py", line 649, in run_until_complete
    return future.result()
  File "/opt/anaconda3/envs/jupyterbook/lib/python3.10/site-packages/nbclient/client.py", line 663, in async_execute
    await self.async_execute_cell(
  File "/opt/anaconda3/envs/jupyterbook/lib/python3.10/site-packages/nbclient/client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "/opt/anaconda3/envs/jupyterbook/lib/python3.10/site-packages/nbclient/client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
:tags: [hide-input]

# .argsort()ãƒ¡ã‚½ãƒƒãƒ‰ã¯ã€é…åˆ—ã®è¦ç´ ã®å€¤ãŒå°ã•ã„é †ã«ã‚¤ãƒ³ãƒ‡ãƒƒã‚¯ã‚¹ã‚’è¿”ã—ã¾ã™ã€‚
# ã—ã‹ã—ã“ã“ã§çŸ¥ã‚ŠãŸã„ã®ã¯ä¸Šä½ã®ã‚¤ãƒ³ãƒ‡ãƒƒã‚¯ã‚¹ã§ã™ã€‚
# ãã“ã§similarityã«-1ã‚’æ›ã‘ã¦ç¬¦å·ã‚’åè»¢ã•ã›ã‚‹ã“ã¨ã§ã€å¤§å°é–¢ä¿‚ã‚’é€†è»¢ã•ã›ã¾ã™ã€‚

# é…åˆ—ã‚’ä½œæˆ
arr = np.array([0, 20, 10, 40, 30])
print(arr)

# ä½ã„é †ã®ã‚¤ãƒ³ãƒ‡ãƒƒã‚¯ã‚¹
print(arr.argsort())

# å¤§å°é–¢ä¿‚ã‚’é€†è»¢
print(-1 * arr)

# é«˜ã„é †ã®ã‚¤ãƒ³ãƒ‡ãƒƒã‚¯ã‚¹
print((-1 * arr).argsort())
------------------

[0;36m  Cell [0;32mIn[21], line 1[0;36m[0m
[0;31m    :tags: [hide-input][0m
[0m    ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (804485789.py, line 1)

